# IDEStudio

./: CMakeLists.txt  CppCompletionModel.cpp  CppCompletionModel.hpp  MainWindow.cpp  MainWindow.hpp  NewFileDialog.cpp  NewFileDialog.hpp  NewProjectDialog.cpp  NewProjectDialog.hpp  ProjectDetails.hpp  ProjectExplorer.cpp  ProjectExplorer.hpp  ProjectModel.cpp  ProjectModel.hpp  ProjectTab.cpp  ProjectTab.hpp  README.md  SyntaxHighlighter.cpp  SyntaxHighlighter.hpp  TextEditor.cpp  TextEditor.hpp
KMX/: kmx.cpp  kmx.hpp
templates/: header.h.txt  main.c.txt
